# python-coding-challenge

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
algorithms/binary_search/: README.md  binary_search.py  test_binary_search.py
dsa/deque/: README.md  (+2 more)
src/: challenge01.py  challenge02.py  challenge03.py  challenge04.py  challenge05.py  challenge06.py  challenge07.py  challenge08.py  challenge09.py  challenge10.py  challenge11.py  challenge12.py  challenge13.py  challenge14.py  challenge15.py  challenge16.py  challenge17.py  challenge18.py  challenge19.py  challenge20.py  challenge21.py  challenge22.py  challenge23.py  challenge24.py  challenge25.py  challenge26.py  challenge27.py  challenge28.py  challenge29.py  challenge30.py  challenge31.py  challenge33.py  challenge34.py  challenge35.py  challenge36.py  challenge38.py  challenge39.py  challenge41.py  challenge42.py  challenge44.py  (+4 more)
tests/: test_challenge02.py  test_challenge03.py  test_challenge05.py  test_challenge06.py  test_challenge07.py  test_challenge10.py  test_challenge11.py  test_challenge12.py  test_challenge15.py  test_challenge17.py  test_challenge19.py  test_challenge20.py  test_challenge21.py  test_challenge26.py  test_challenge27.py  test_challenge28.py  test_challenge29.py  test_challenge31.py  test_challenge33.py  test_challenge36.py  test_challenge38.py  test_challenge40.py  test_challenge41.py  test_challenge42.py  test_challenge43.py  test_challenge45.py  test_challenge46.py  test_challenge47.py  test_challenge48.py  test_challenge50.py  test_challenge53.py
(+66 files in other folders)
